--- a/check2/GUI/UI/untitled.ui
+++ b/check2/GUI/UI/untitled.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>988</width>
-    <height>661</height>
+    <width>992</width>
+    <height>644</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,15 +19,15 @@
      <x>220</x>
      <y>50</y>
      <width>581</width>
-     <height>431</height>
+     <height>561</height>
     </rect>
    </property>
   </widget>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>820</x>
-     <y>180</y>
+     <x>810</x>
+     <y>230</y>
      <width>71</width>
      <height>21</height>
     </rect>
@@ -43,7 +43,7 @@
    <property name="geometry">
     <rect>
      <x>810</x>
-     <y>30</y>
+     <y>60</y>
      <width>81</width>
      <height>21</height>
     </rect>
@@ -55,22 +55,12 @@
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QTableView" name="TableView">
-   <property name="geometry">
-    <rect>
-     <x>220</x>
-     <y>491</y>
-     <width>581</width>
-     <height>161</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QCheckBox" name="checkBox">
+  <widget class="QCheckBox" name="showSegmentation">
    <property name="geometry">
     <rect>
      <x>840</x>
      <y>550</y>
-     <width>101</width>
+     <width>131</width>
      <height>41</height>
     </rect>
    </property>
@@ -78,12 +68,12 @@
     <string>显示分割结果</string>
    </property>
   </widget>
-  <widget class="QCheckBox" name="checkBox_2">
+  <widget class="QCheckBox" name="showRaw">
    <property name="geometry">
     <rect>
      <x>840</x>
      <y>500</y>
-     <width>101</width>
+     <width>131</width>
      <height>41</height>
     </rect>
    </property>
@@ -94,8 +84,8 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>820</x>
-     <y>60</y>
+     <x>810</x>
+     <y>90</y>
      <width>31</width>
      <height>16</height>
     </rect>
@@ -110,8 +100,8 @@
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>820</x>
-     <y>100</y>
+     <x>810</x>
+     <y>140</y>
      <width>31</width>
      <height>16</height>
     </rect>
@@ -126,8 +116,8 @@
   <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
-     <x>820</x>
-     <y>140</y>
+     <x>810</x>
+     <y>190</y>
      <width>31</width>
      <height>16</height>
     </rect>
@@ -142,38 +132,38 @@
   <widget class="QTextBrowser" name="SpacingX">
    <property name="geometry">
     <rect>
-     <x>860</x>
-     <y>50</y>
-     <width>91</width>
-     <height>31</height>
+     <x>850</x>
+     <y>80</y>
+     <width>111</width>
+     <height>41</height>
     </rect>
    </property>
   </widget>
   <widget class="QTextBrowser" name="SpacingY">
    <property name="geometry">
     <rect>
-     <x>860</x>
-     <y>90</y>
-     <width>91</width>
-     <height>31</height>
+     <x>850</x>
+     <y>130</y>
+     <width>111</width>
+     <height>41</height>
     </rect>
    </property>
   </widget>
   <widget class="QTextBrowser" name="SpacingZ">
    <property name="geometry">
     <rect>
-     <x>860</x>
-     <y>130</y>
-     <width>91</width>
-     <height>31</height>
+     <x>850</x>
+     <y>180</y>
+     <width>111</width>
+     <height>41</height>
     </rect>
    </property>
   </widget>
   <widget class="QLabel" name="label_7">
    <property name="geometry">
     <rect>
-     <x>820</x>
-     <y>250</y>
+     <x>810</x>
+     <y>310</y>
      <width>31</width>
      <height>16</height>
     </rect>
@@ -188,18 +178,18 @@
   <widget class="QTextBrowser" name="ResolutionX">
    <property name="geometry">
     <rect>
-     <x>860</x>
-     <y>200</y>
+     <x>850</x>
+     <y>250</y>
      <width>91</width>
-     <height>31</height>
+     <height>41</height>
     </rect>
    </property>
   </widget>
   <widget class="QLabel" name="label_8">
    <property name="geometry">
     <rect>
-     <x>820</x>
-     <y>290</y>
+     <x>810</x>
+     <y>360</y>
      <width>31</width>
      <height>16</height>
     </rect>
@@ -214,8 +204,8 @@
   <widget class="QLabel" name="label_9">
    <property name="geometry">
     <rect>
-     <x>820</x>
-     <y>210</y>
+     <x>810</x>
+     <y>260</y>
      <width>31</width>
      <height>16</height>
     </rect>
@@ -227,23 +217,23 @@
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QTextBrowser" name="textBrowser_5">
+  <widget class="QTextBrowser" name="ResolutionZ">
    <property name="geometry">
     <rect>
-     <x>860</x>
-     <y>280</y>
+     <x>850</x>
+     <y>350</y>
      <width>91</width>
-     <height>31</height>
+     <height>41</height>
     </rect>
    </property>
   </widget>
   <widget class="QTextBrowser" name="ResolutionY">
    <property name="geometry">
     <rect>
-     <x>860</x>
-     <y>240</y>
+     <x>850</x>
+     <y>300</y>
      <width>91</width>
-     <height>31</height>
+     <height>41</height>
     </rect>
    </property>
   </widget>
@@ -283,7 +273,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>290</y>
+     <y>210</y>
      <width>171</width>
      <height>51</height>
     </rect>
@@ -296,7 +286,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>370</y>
+     <y>290</y>
      <width>171</width>
      <height>51</height>
     </rect>
@@ -321,34 +311,24 @@
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QPushButton" name="DataPreprocessButton">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>210</y>
-     <width>171</width>
-     <height>51</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>数据预处理</string>
-   </property>
-  </widget>
   <widget class="QSpinBox" name="spinBox">
    <property name="geometry">
     <rect>
      <x>900</x>
-     <y>400</y>
+     <y>440</y>
      <width>61</width>
-     <height>22</height>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="maximum">
+    <number>99999</number>
    </property>
   </widget>
   <widget class="QLabel" name="label_11">
    <property name="geometry">
     <rect>
-     <x>820</x>
-     <y>390</y>
+     <x>810</x>
+     <y>440</y>
      <width>81</width>
      <height>41</height>
     </rect>
@@ -363,8 +343,8 @@
   <widget class="QLabel" name="label_12">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>500</y>
+     <x>20</x>
+     <y>390</y>
      <width>91</width>
      <height>21</height>
     </rect>
@@ -380,7 +360,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>570</y>
+     <y>520</y>
      <width>81</width>
      <height>21</height>
     </rect>
@@ -396,7 +376,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>590</y>
+     <y>540</y>
      <width>201</width>
      <height>31</height>
     </rect>
@@ -408,14 +388,121 @@
   <widget class="QTextBrowser" name="ImportDataPath">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>520</y>
-     <width>171</width>
-     <height>31</height>
+     <x>20</x>
+     <y>410</y>
+     <width>181</width>
+     <height>41</height>
     </rect>
    </property>
   </widget>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>ImportDataButton</sender>
+   <signal>clicked()</signal>
+   <receiver>Form</receiver>
+   <slot>pressImport()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>150</x>
+     <y>150</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>124</x>
+     <y>35</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>StartSegmentation</sender>
+   <signal>clicked()</signal>
+   <receiver>Form</receiver>
+   <slot>pressSegmentation()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>192</x>
+     <y>300</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>265</x>
+     <y>16</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>OutputData</sender>
+   <signal>clicked()</signal>
+   <receiver>Form</receiver>
+   <slot>pressExport()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>184</x>
+     <y>406</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>112</x>
+     <y>442</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>showRaw</sender>
+   <signal>stateChanged(int)</signal>
+   <receiver>Form</receiver>
+   <slot>showRawImage()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>860</x>
+     <y>528</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>829</x>
+     <y>479</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>showSegmentation</sender>
+   <signal>stateChanged(int)</signal>
+   <receiver>Form</receiver>
+   <slot>showSegmentationResult()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>901</x>
+     <y>574</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>956</x>
+     <y>613</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>spinBox</sender>
+   <signal>valueChanged(QString)</signal>
+   <receiver>Form</receiver>
+   <slot>switchImage(QString)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>915</x>
+     <y>412</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>872</x>
+     <y>361</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+ <slots>
+  <slot>pressImport()</slot>
+  <slot>pressDataPre()</slot>
+  <slot>pressSegmentation()</slot>
+  <slot>pressExport()</slot>
+  <slot>showRawImage()</slot>
+  <slot>showSegmentationResult()</slot>
+  <slot>switchImage(QString)</slot>
+  <slot>loadCheckPoint(QModelIndex)</slot>
+ </slots>
 </ui>
